<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="ime_name">Jbak Keyboard</string>
    <string name="ime_settings">Jbak Keyboard settings</string>
	<string name="pref_keys">Key settings</string>
	<string name="pref_keys_desc">Key heights and vertical corrections</string>
    <string name="label_go_key">Go</string>
    <string name="label_next_key">Next</string>
    <string name="label_send_key">Send</string>
    <string name="set_ch_keys_preview">Show keys preview</string>
    <string name="set_ch_keys_preview_desc">Disable this, if you don\'t want see popup previews of pressed keys</string>
    <string name="set_key_height_portrait">Key height portrait</string>
    <string name="set_key_height_portrait_desc">Change key height for qwerty-keyboard in portrait mode </string>
    <string name="set_key_height_landscape">Key height landscape</string>
    <string name="set_key_height_landscape_desc">Change key height for qwerty-keyboard in landscape mode </string>
    <string name="set_languages">Languages and keyboards</string>
    <string name="set_languages_desc">Here you can select languages for switching</string>
    <string name="set_key_voice">Voice and vibro</string>
    <string name="set_key_voice_desc">Here you can change settings for voice and tactile feedback </string>
    <string name="set_key_short_vibro">Vibro on short press</string>
    <string name="set_key_short_vibro_desc">If enabled - screen vibrates on key press</string>
    <string name="set_key_long_vibro">Vibro on long press</string>
    <string name="set_key_long_vibro_desc">If enabled - screen vibrates on key long press</string>
    <string name="set_key_repeat_vibro">Vibro on repeat</string>
    <string name="set_key_repeat_vibro_desc">If enabled - screen vibrates on key repeats (for example, when holding backspace)</string>
    <string name="set_key_repeat_vibro_duration">Repeat interval</string>
    <string name="set_key_short_vibro_duration">Short press interval</string>
    <string name="set_key_long_vibro_duration">Long press interval</string>
    <string name="set_key_vibro_durations">Vibro intervals</string>
    <string name="set_key_vibro_durations_desc">Here you can set vibro intervals (in miliseconds)</string>
    <string name="set_key_vibro_in_silent">Vibro in silent mode</string>
    <string name="set_key_vibro_in_silent_desc">Check this for enable vibro in silent mode</string>
    <string name="set_key_sounds">Enable sounds</string>
    <string name="set_key_sounds_desc">If enabled - keys sounds after each press</string>
    <string name="set_key_sounds_volume">Sounds volume</string>
    <string name="set_key_sounds_volume_desc">Volume of all sounds</string>
    <string name="calibr_portrait">Vert. correction portrait</string>
    <string name="calibr_landscape">Vert. correction landscape</string>
    <string name="calibr_desc">Vertical keys correction for better key presses</string>
    <string name="calibr_input">Input text:</string>
    <string name="calibr_test">the five boxing wizards jump quickly</string>
    <string name="calibr_toggle_auto">Auto</string>
    <string name="calibr_toggle_manual">Manual</string>
    <string name="calibr_save">Your vertical correction is: %1$d.\n System value is: %2$d\n\n Do you want to save?</string>
    <string name="calibr_label">Vertical correction:</string>
    <string name="calibr_test_hint">Test input</string>
    <string name="set_ac_font">Autocomplete panel font</string>
    <string name="set_ac_font_desc">Font for autoocomplete panel</string>
    <string name="set_key_other">Autoinput</string>
    <string name="set_key_other_desc">Some settings for automatic input</string>
    <string name="set_key_register">Upper case on keyboard</string>
    <string name="set_key_spaces">Adding spaces</string>
    <string name="set_key_empty_uppercase">In empty text field</string>
    <string name="set_key_empty_uppercase_desc">If target text-field is empty - then starts input from uppercase</string>
    <string name="set_key_auto_case">Autochange case</string>
    <string name="set_key_auto_case_desc">Auto change upper and lower case. See next setting for rules</string>
    <string name="set_key_auto_case_rules">Case rules</string>
    <string name="set_key_auto_case_rules_desc">Rules for going to uppercase</string>
    <string name="set_key_sentence_upper">After some symbols</string>
    <string name="set_key_sentence_upper_desc">Automatic uppercase after some symbols. See next setting</string>
    <string name="set_key_sentence_ends">Upper case symbols</string>
    <string name="set_key_sentence_ends_desc">After input one of these symbols keyboard go to uppercase. Click to edit</string>
    <string name="set_key_sentence_space_end">Only after spaces</string>
    <string name="set_key_sentence_space_end_desc">Upper case after space or linefeed, inserted after symbol from previous setting</string>
    <string name="set_key_space_sentence_end">After some symbols</string>
    <string name="set_key_space_sentence_end_desc">Automatic space adding after some symbols. See next setting</string>
    <string name="set_key_space_symbols">Symbols for add space</string>
    <string name="set_key_space_symbols_desc">After input one of these symbols keyboard will add space. Click to edit</string>
    <string name="set_key_landscape_input">Fullscreen input</string>
    <string name="set_key_landscape_input_desc">Settings for input in fullscreen</string>
    <string name="set_key_portrait_input_type">Portrait edit type</string>
    <string name="set_key_portrait_input_type_desc">Select preffered portrait editor type</string>
        <string name="set_key_landscape_input_type">Landscape edit type</string>
    <string name="set_key_landscape_input_type_desc">Select preffered lanscape editor type</string>
    <string name="set_key_landscape_input_settings">Fullscreen edit settings</string>
    <string name="set_key_landscape_input_settings_desc">Settings for text editor in fullscreen mode</string>
    <string name="set_select_keyboard">Select keyboard</string>
    <string name="set_key_skins">Skins</string>
    <string name="set_key_skins_desc">Various skins for keyboard</string>
    <string name="set_key_fonts">Fonts</string>
    <string name="set_key_fonts_desc">Font settings for keyboard keys</string>
    <string name="set_key_font_first">Primary font</string>
    <string name="set_key_font_first_desc">Font for main letters</string>
    <string name="set_key_font_second">Symbol font</string>
    <string name="set_key_font_second_desc">Font for additional symbols</string>
    <string name="set_key_font_label">Label font</string>
    <string name="set_key_font_label_desc">Font for text labels (language,Select,Copy and other keys)</string>
    <string name="set_key_misc">Other settings</string>
    <string name="set_key_misc_desc">Some other settings </string>
    <string name="set_key_shift">Shift key</string>
    <string name="set_key_appearance">Appearance</string>
    <string name="set_key_appearance_desc">Settings for look and feel</string>
    <string name="set_key_clipbrd_size">Clipboard size</string>
    <string name="set_key_clipbrd_size_desc">Number of max entries in multiclipboard</string>
    <string name="set_key_intervals">Key delays</string>
    <string name="set_key_intervals_desc">Delays for long-press and repeats</string>
    <string name="set_key_save_pref">Save settings</string>
    <string name="set_key_save_pref_desc">Into file:</string>
    <string name="set_key_load_pref">Load settings</string>
    <string name="set_key_load_pref_desc">From file:</string>
    <string name="set_key_ac">Autocomplete</string>
    <string name="set_key_ac_desc">Settings for word autocompletions</string>
    <string name="set_key_ac_place">Show autocompletions</string>
    <string name="set_key_ac_place_desc">Where you want to see autocompletions?</string>
    <string name="set_key_ac_place_0">Disable</string>
    <string name="set_key_ac_place_1">On top of keyboard</string>
    <string name="set_key_ac_place_2">In system status-bar</string>
    <string name="set_key_ac_place_3">In cursor position</string>
    <string name="set_key_ac_load_vocab">Dictionary downloads</string>
    <string name="set_key_ac_load_vocab_desc">You need dictionary for autocompletions and autocorrections</string>
    <string name="set_key_ac_autocorrect">Autocorrection</string>
    <string name="set_key_ac_autocorrect_desc">Apply current suggestion by space or another punctuations</string>
    <string name="set_key_gestures">Gestures</string>
    <string name="set_key_gestures_desc">Settings for gestures</string>
    <string name="set_key_use_gestures">Use gestures</string>
    <string name="set_key_use_gestures_desc">Enable/disable all gestures</string>
    <string name="set_key_gesture_left">Left</string>
    <string name="set_key_gesture_right">Right</string>
    <string name="set_key_gesture_up">Up</string>
    <string name="set_key_gesture_down">Down</string>
    <string name="set_key_gesture_space_left">Left from spacebar</string>
    <string name="set_key_gesture_space_right">Right from spacebar</string>
    <string name="set_key_use_volumeKeys">Use volume keys</string>
    <string name="set_key_use_volumeKeys_desc">Use volume keys for cursor movement</string>
    <string name="vk_use_1">+ left, - right</string>
    <string name="vk_use_2">- left, + right</string>
    <string name="preview_show_0">Not show</string>
	<string name="preview_show_1">Show under keys</string>
	<string name="preview_show_2">Show on center</string>
    <string name="interval_long_press">Long-press delay (ms)</string>
    <string name="interval_first_repeat">First repeat delay (ms)</string>
    <string name="interval_next_repeat">Next repeats delay (ms)</string>
    <string-array name="array_shift_vars">
        <item>3-state (normal,shift,capslock)</item>
        <item>2-state (normal,shift)</item>
        <item>2-state (normal,capslock)</item>
    </string-array>
    <string-array name="vibro_short_type">
        <item>No vibro</item>
        <item>On key release</item>
        <item>On key press</item>
    </string-array>
    <string-array name="screen_type_vars">
        <item>Portrait and landscape</item>
        <item>Only portrait</item>
        <item>Only landscape</item>
    </string-array>
    <string name="es_title">Fullscreen editor settings</string>
    <string name="es_sample">Edit sample</string>
    <string name="es_sample_text">First line\nSecond line\nThird line</string>
    <string name="es_font">Font</string>
    <string name="es_font_size">Font size</string>
    <string name="es_font_bold">Bold</string>
    <string name="es_font_italic">Italic</string>
    <string name="es_def_font">Default font size</string>
    <string-array name="array_fonts">
        <item>Default</item>
        <item>Droid serif</item>
        <item>Monospace</item>
    </string-array>
    <string-array name="array_input_type" tools:ignore="MissingTranslation">
        <item>Default</item>
        <item>Fullscreen</item>
        <item>Not fullscreen</item>
    </string-array>
    <string name="mm_templates">Templates</string>
    <string name="mm_multiclipboard">Clipboard</string>
    <string name="mm_settings">Settings</string>
    <string name="mm_close">Close</string>
    <string name="tpl_new_template">New\ntemplate</string>
    <string name="tpl_new_folder">New\nfolder</string>
    <string name="tpl_name">Template name</string>
    <string name="tpl_text">Template text</string>
    <string name="tpl_spec_options">Special options</string>
	<string name="about_app">Application:</string>
	<string name="about_author">Author:</string>
	<string name="about_author_desc">Juriy Bakunin aka Jbak\njbak1979@gmail.com</string>
	<string name="about_other">Other:</string>
	<string name="about_other_desc">Icons by Ali Gamidov (ali.gamidov@mail.ru)</string>
</resources>