<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    >
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="vertical"
    android:padding="10px"
    >
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    android:orientation="horizontal"
    >
    <ImageView 
    android:layout_width="48px"
    android:layout_height="48px"
    android:src="@drawable/icon"
    android:layout_marginRight="20px" 
        />
    <TextView
        style="@android:style/TextAppearance.Large"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textColor="#ff880000"
        android:text="@string/ime_name"
        android:layout_gravity="center_vertical"
        android:textStyle="bold" 
        />
</LinearLayout>    
<TextView 
    style="@style/about_item"
    android:text="@string/about_app"
    />
<TextView 
    android:id="@+id/version"
    style="@style/label_desc"
    android:text="Application version"
    />
<TextView 
    style="@style/about_item"
    android:text="@string/about_author"
    />
<TextView 
    android:id="@+id/version"
    style="@style/label_desc"
    android:text="@string/about_author_desc"
    />
<TextView 
    style="@style/about_item"
    android:text="@string/about_other"
    />
<TextView 
    android:id="@+id/version"
    style="@style/label_desc"
    android:text="@string/about_other_desc"
    />
</LinearLayout>
</ScrollView>