<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:layout_marginLeft="5px"
    >
<TextView android:id="@+id/interval1" style="@style/label_white" android:text="@string/interval_long_press"/>
<com.jbak.ctrl.IntEditor
    android:id="@+id/long_press"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    />
<TextView android:id="@+id/interval2" style="@style/label_white" android:text="@string/interval_first_repeat"/>
<com.jbak.ctrl.IntEditor
    android:id="@+id/first_repeat"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    />
<TextView android:id="@+id/interval3" style="@style/label_white" android:text="@string/interval_next_repeat"/>
<com.jbak.ctrl.IntEditor
    android:id="@+id/next_repeat"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    />
</LinearLayout>
</ScrollView>