<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
>
<RelativeLayout
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  >
<LinearLayout
  android:id="@+id/com_menu_buttons"
  android:layout_width="wrap_content"
  android:layout_height="fill_parent"
  android:orientation="vertical"
android:layout_alignParentTop="true"
android:layout_alignParentRight="true"
>
<Button
  	style="@style/img_button"
	android:drawableTop="@drawable/keyboard"
	android:id="@+id/close"
	android:text="@string/mm_close"
/>  
<Button
  style="@style/img_button"
  android:drawableTop="@drawable/add"
  android:id="@+id/but_new_template"	
  android:text="@string/tpl_new_template"
/>
<Button
  style="@style/img_button"
  android:drawableTop="@drawable/folder_add"
  android:id="@+id/but_new_template_folder"	
  android:text="@string/tpl_new_folder"
/>
</LinearLayout>
<LinearLayout
  android:id="@+id/com_menu_container"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  android:layout_alignParentTop="true"
  android:layout_alignParentLeft="true"
  android:layout_toLeftOf="@id/com_menu_buttons"
/>
</RelativeLayout>
</ScrollView>
